2025-06-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (with-tramp-suspended-timers, without-remote-files):
	Fix debug spec.

	* tramp-archive.el (tramp-archive-autoload-file-name-regexp):
	Fix comment.

	* tramp-sh.el (tramp-perl-file-name-all-completions): Cache also
	`file-executable-p'.  Suggested by <mail@knazarov.com>.
	(tramp-shell-file-name-all-completions): New script.
	(tramp-bundle-read-file-names): Fix for special characters.  Cache
	also `file-executable-p'.
	(tramp-sh-handle-file-name-all-completions): Unify different cases.

2025-06-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-maybe-open-connection):
	* tramp-rclone.el (tramp-rclone-maybe-open-connection):
	Set "connected" property in time.

2025-06-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-barf-if-file-missing): Do not raise an error
	when not connected.  (Bug#78572)
	(tramp-file-name-handler): Do not force the backtrace.
	(tramp-connectable-p): Check also, whether initial handshake is finished.
	(tramp-skeleton-directory-files)
	(tramp-skeleton-directory-files-and-attributes)
	(tramp-skeleton-set-file-modes-times-uid-gid): Rearrange sending
	`file-missing' error.
	(tramp-handle-access-file, tramp-handle-unlock-file):
	Use `tramp-connectable-p'.

	* tramp-cmds.el (tramp-cleanup-connection):
	Use read syntax #' for `tramp-timeout-session',

2025-05-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-container.el (tramp-methods) <docker, dockercp, podman>
	<podmancp, apptainer, nspawn>:
	* tramp-sh.el (tramp-methods) <scp, scpx, rsync, ssh, sshx, sudo>:
	* tramp-sshfs.el (tramp-methods) <sshfs>: Set TERM environment.
	(Bug#78508)

	* tramp.el (tramp-process-sentinel): Adapt docstring.
	Set " process-exit-status" property.

	* tramp-sh.el (tramp-find-executable): Handle superlong PATH.
	(tramp-set-remote-path): Simplify command.
	(tramp-timeout-session): Add ;;;###tramp-autoload cookie.
